--- a/assets/notfound-dark.css
+++ b/assets/notfound-dark.css
@@ -417,7 +417,7 @@ html {
 
 body {
   margin: 0 auto;
-  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-family: "GT Sectra Fine";
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   line-height: 1.8;
