--- a/layout.pug
+++ b/layout.pug
@@ -9,7 +9,7 @@ mixin header(path, lan)
                 a.p(href=r) #{r}
         ul.language 
             each lan in d 
-                a(href='src/' + lan + '/index.html') 
+                a(href='https://awkure.github.io/src/' + lan + '/index.html') 
                     li #{lan}
 
 doctype html
