--- a/src/by/index.pug
+++ b/src/by/index.pug
@@ -6,7 +6,7 @@ block title
 block content 
     +header('', 'by')
     section.main 
-        p.intro Жыхар чыстай падсвядомасци, мема, якi iснуе толькi ў межах рэлятывісцкага прасторава-часавога конусу
+        p.intro Жыхар чыстай падсвядомасцi, мема, якi iснуе толькi ў межах рэлятывісцкага прасторава-часавога конусу
         .divider 
         .media 
             a(href='https://t.me/systemspace') .tg
