--- a/src/jp/index.pug
+++ b/src/jp/index.pug
@@ -6,7 +6,7 @@ block title
 block content 
     +header('', 'jp')
     section.main 
-        p.intro 相対論的時空内にのみ存在する純粋な潜在意識
+        p.intro_jp 相対論的時空内にのみ存在する純粋な潜在意識
         .divider 
         .media 
             a(href='https://t.me/systemspace') .tg
