--- a/layouts/blog.pug
+++ b/layouts/blog.pug
@@ -1,13 +1,13 @@
 mixin header(path, lan)
     - const s = path.split('/')
-    - s.shift()
+    //- - s.shift()
     - var d = ['en', 'ru', 'by', 'jp', 'la']
     - const _ = d.splice(d.indexOf(lan),1)
     - d.unshift(lan)
     nav
         if path 
             .path
-                a.p(href='../index.html') root
+                //- a.p(href='../index.html') root
                 each r in s 
                     if s.indexOf(r)+1 === s.length
                         a.p(href='#') #{r}
@@ -15,8 +15,9 @@ mixin header(path, lan)
                         a.p(href=r) #{r}
         ul.language 
             each lan in d 
-                a(href='https://awkure.github.io/src/' + lan + '/index.html') 
+                a(href='https://awkure.github.io/src/' + lan + '/' + s.join() + '/index.html') 
                     li #{lan}
+
 doctype html
 html
     head
@@ -32,8 +33,8 @@ html
         meta(property='og:type'             content='website')
         meta(property='og:url'              content='https://awkure.github.io')
         meta(name='viewpowrt'               content='width=device-width, initial-scale=1')
-        //- link(rel='stylesheet' href='https://awkure.github.io/styles/blog.css')
-        link(rel='stylesheet' href='/home/adam/work/blog/awkure.github.io/styles/blog.css')
+        link(rel='stylesheet' href='https://awkure.github.io/styles/blog.css')
+        //- link(rel='stylesheet' href='/home/adam/work/blog/awkure.github.io/styles/blog.css')
         block title
             title default
 
