--- a/styles/blog.css
+++ b/styles/blog.css
@@ -49,8 +49,9 @@ main h3 {
 }
 
 main p {
+    font-family: 'Raleway';
     margin: 20px;
-    max-width: 850px;
+    /* max-width: 850px; */
     line-height: 1.5;
 }
 
@@ -61,6 +62,14 @@ main a {
     display: block;
     font-size: 1.5em;
     font-weight: lighter;
+}
+
+.quote {
+    font-family: 'Raleway';
+    margin: 20px;
+    padding: 10px;
+    border-left: 4px solid #444;
+    font-size: 1.2em;
 }
 
 main a:hover {
@@ -95,11 +104,11 @@ nav a:hover {
 
 nav .language {
     position: absolute;
-    height: 55px;
+    height: 43px;
     display: inline-block;
     overflow: hidden;
     transition: all .3s ease;
-    margin: 0 50px 10px 0;
+    margin: -9px 50px 10px 0;
     vertical-align: top;
     padding: 0;
     right: 0;
@@ -108,7 +117,7 @@ nav .language {
 }
 
 nav .language:hover {
-    height: 255px;
+    height: 185px;
 }
 
 nav .language a {
@@ -118,7 +127,7 @@ nav .language a {
 nav .language li {
     display: block;
     padding: 0px 20px;
-    line-height: 50px;
+    line-height: 35px;
 }
 
 .logo {
@@ -137,6 +146,20 @@ nav .language li {
     border-left: 2px solid black;
     padding-left: 20px;
 } 
+
+.title {
+    margin: 100px auto 30px auto;
+    max-width:  1170px;
+}
+
+.title h1 {
+    font-family: 'Raleway';
+    font-weight: lighter;
+    color: black;
+    font-size: 4em; 
+    border-left: 2px solid black;
+    padding-left: 20px;
+}
 
 .divider {
     height: 2px;
