--- a/index/en.pug
+++ b/index/en.pug
@@ -1,12 +1,12 @@
-extends ../../layouts/main
+extends ../layouts/main
 
 block title 
-    title アダム
+    title adam
 
 block content 
-    +header('', 'jp')
+    +header('', 'en')
     section.main 
-        p.intro_jp 相対論的時空内にのみ存在する純粋な潜在意識
+        p.intro A dweller of pure subconscious, a meme, existing only within relativistic space-time cone
         .divider 
         .media 
             a(href='https://t.me/systemspace') .tg
