--- a/index/jp.pug
+++ b/index/jp.pug
@@ -1,12 +1,12 @@
-extends ../../layouts/main
+extends ../layouts/main
 
 block title 
-    title адам 
+    title アダム
 
 block content 
-    +header('', 'by')
+    +header('', 'jp')
     section.main 
-        p.intro Жыхар чыстай падсвядомасцi, мема, якi iснуе толькi ў межах рэлятывісцкага прасторава-часавога конусу
+        p.intro_jp 相対論的時空内にのみ存在する純粋な潜在意識
         .divider 
         .media 
             a(href='https://t.me/systemspace') .tg
