--- a/index/la.pug
+++ b/index/la.pug
@@ -1,12 +1,12 @@
-extends ../../layouts/main
+extends ../layouts/main
 
 block title 
     title adam
 
 block content 
-    +header('', 'en')
+    +header('', 'la')
     section.main 
-        p.intro A dweller of pure subconscious, a meme, existing only within relativistic space-time cone
+        p.intro A habitat in pura subconscientiae erumpentem, quentiam, nisi existentium in spatium-tempus pyramidis indolis relativisticae
         .divider 
         .media 
             a(href='https://t.me/systemspace') .tg
