--- a/index/by.pug
+++ b/index/by.pug
@@ -1,12 +1,12 @@
-extends ../../layouts/main
+extends ../layouts/main
 
 block title 
-    title adam
+    title адам 
 
 block content 
-    +header('', 'la')
+    +header('', 'by')
     section.main 
-        p.intro A habitat in pura subconscientiae erumpentem, quentiam, nisi existentium in spatium-tempus pyramidis indolis relativisticae
+        p.intro Жыхар чыстай падсвядомасцi, мема, якi iснуе толькi ў межах рэлятывісцкага прасторава-часавога конусу
         .divider 
         .media 
             a(href='https://t.me/systemspace') .tg
