--- a/layouts/main.pug
+++ b/layouts/main.pug
@@ -13,7 +13,7 @@ mixin header(path, lan)
                         a.p(href=r) #{r}
         ul.language 
             each lan in d 
-                a(href='https://awkure.github.io/src/' + lan + '/index.html') 
+                a(href='https://awkure.github.io/index/' + lan + '.html') 
                     li #{lan}
 
 doctype html
