--- a/blog/2018/Отступ-в-Формальную-Философию.pug
+++ b/blog/2018/Отступ-в-Формальную-Философию.pug
@@ -1,10 +1,9 @@
-extends ../../../layouts/post
+extends ../../layouts/post
 
 block title 
-    title adam | Блог | Отступ в Формальную Философию
+    title Отступ в Формальную Философию
 
 block content
-    +header('Корень/Блог/Отступ в Формальную Философию', 'ru')
     .title
         h1 Отступ в Формальную Философию
     main
