--- a/blog/index.pug
+++ b/blog/index.pug
@@ -12,7 +12,9 @@ block content
         h1 Stream
     main 
         - 
-            const articles = [ [ "Fish-can't-see-water.html" , 2018 ] ]
+            const articles = [ [ "Отступ-в-Формальную-Философию.html" , 2018 ] 
+                             , [ "Fish-can't-see-water.html"          , 2018 ] ]
+                             
             const years = [...new Set(articles.reduce((acc, cur) => [...acc, cur[1]], []))]
             const renderTitle = a => a.slice(0,-5).split('-').join(' ')
         each year in years 
