--- a/styles/blog.css
+++ b/styles/blog.css
@@ -25,6 +25,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    -webkit-font-smoothing: antialiased; 
+    -moz-osx-font-smoothing: grayscale; 
+    text-rendering: optimizeLegibility; 
+    -moz-font-feature-settings: "liga" on; 
 }
 
 a {
