--- a/layouts/post.pug
+++ b/layouts/post.pug
@@ -12,8 +12,8 @@ html
         meta(name='og:image'                content='https://awkure.github.io/bg.jpg')
         meta(property='og:type'             content='website')
         meta(property='og:url'              content='https://awkure.github.io')
-        link(rel='stylesheet' href='https://awkure.github.io/styles/blog.css')
-        //- link(rel='stylesheet' href='/home/adam/work/blog/awkure.github.io/styles/blog.css')
+        //- link(rel='stylesheet' href='https://awkure.github.io/styles/blog.css')
+        link(rel='stylesheet' href='/home/adam/work/blog/awkure.github.io/styles/blog.css')
         block title
             title default
 
