--- a/blog/index.pug
+++ b/blog/index.pug
@@ -1,19 +1,17 @@
 extends ../layouts/blog
 
-//- mixin posts(articles)
-
 block title 
     title Stream
 
 block content 
-    //- +blog_header('root/blog')
     +header('root/blog', 'en')
     .logo 
         h1 Stream
     main 
         - 
-            const articles = [ [ "Отступ-в-Формальную-Философию.html" , 2018 ] 
-                             , [ "Fish-can't-see-water.html"          , 2018 ] ]
+            const articles = [ [ "Сасуд.html"                                      , 2019 ]
+                             , [ "Отступ-в-Формальную-Философию.html"              , 2018 ] 
+                             , [ "Fish-can't-see-water.html"                       , 2018 ] ]
                              
             const years = [...new Set(articles.reduce((acc, cur) => [...acc, cur[1]], []))]
             const renderTitle = a => a.slice(0,-5).split('-').join(' ')
