--- a/blog/2019/Сасуд.pug
+++ b/blog/2019/Сасуд.pug
@@ -19,42 +19,42 @@ block content
             Першае, што я памятаю, пераносiць 25 гадоў таму назад. 
             Ясная ранiца, якая выглядае амаль падробленай. 
         p.
-            Першае, што я павядал, былi роўныя белыя сцены, яркiя лампачкi, размытыя выгляды і рукі, якiя трымаюць слоікі з фарбай.
+            Першае, што я увiдзеў, былi роўныя белыя сцены, яркiя лампачкi, размытыя выгляды і рукі, якiя трымаюць слоікі з фарбай.
         p.
             Раней выгляд был вельмi выразным, але гады ніколі не бываюць ветлiвымi. 
-            Мінулае заўсёды гуляюць сапраўдныя трукі на розуме. 
-            Глухія гукі павольна сталі галасамi, парылаючы над маім целам i назіраючы як здарыцца Божы цуд. 
-            Жыццё працягнула мае канечнасці. Яны пачалі задаваць мне пытанні, але я, відавочна, не мог адказаць сваім цяперашним разуменнем быць нованароджаным.
+            Мінулае заўсёды гуляе сапраўдныя трукі на розуме. 
+            Глухія гукі павольна робяцца галасамi, атрымаючыся над маім целам i назіраючы як здараецца Божы цуд. 
+            Жыццё працягнула мае канечнасці. Яны пачалі задаваць мне пытанні, але я, відавочна, не мог адказаць сваім цяперашним разуменнем быць наванароджаным.
         p.
-            Урокі не пачнуцца ў бліжайшы час. Я атрымаю, што я не самы хуткі мысляр, але я быў вельмі мабільным. 
-            У раннім узросце мае абавязкі, побыт, пачыналіся так як і ва ўсіх.
-            Мае сябры не любяць размаўляць шмат, але, як мінімум, яны ёсць каб дапамагчы ў цяжкай сітуацыі. 
+            Урокі не пачынаюцца ў бліжэйшы час. Я атрымаю, што я не самы хуткі мысляр, але быў вельмі мабільным. 
+            У раннім узросце мае абавязкі, побыт, пачыналіся так, як і ва ўсіх.
+            Мае сябры не любяць размаўляць шмат, але, як мінімум, яны ёсць, каб дапамагчы ў цяжкай сітуацыі. 
             Калі з'яўляецца праца, якую неабходна выканаць, я заўсёды быў асаблівым.
         p. 
             У іншых былі сумныя імёны, але мае бацькі звалі мяне
         p. 
-            Сасуд
+            Сасуд.
         p. 
             Сёння вечарам мы святкуем год, калі я нарадзіўся. Кожны год я чакаю каля акна ў трыманнi гудка. На спазненне на 3 гадзіны я звычайна не скарджуся, але іх адсутнасць сёння з'яўляецца чымсьці больш чым дзіўнае.
         p. 
-            Ці павінен я быць падазроным? Мая праца бездакорная. Я глядзеў за імі, калі яны спалі, пакуль мае самыя рукі займаліся ўраджаем. 
+            Ці павінен лi я быць падазроным? Мая праца бездакорная. Я глядзеў за імі, калі яны спалі, пакуль мае самыя рукі займаліся ўраджаем. 
         p. 
-            Забяспечыўшы святло для майго пошуку, ўключыўся выключальнік на кухні. Вокны былi адкрытымi, нешта змешванае прыцягнула маю ўвагу. На стале побач з нумарам тэлефона я ніколі не бачыў раскіданыя паперы ў тэчцы і мая фатаграфія. 
+            Забяспечыўшы святло для майго пошуку, ўключыўся выключальнік на кухні. Вокны былi адкрытымi, нешта змешванае прыцягнула маю ўвагу. На стале побач з нумарам тэлефона я ніколі не бачыў, раскіданыя паперы ў тэчцы і мая фатаграфія. 
         p. 
             Гэта было права ўласнасці з канца 1994 года для зарэгістраванай машыны з маімі ініцыяламі. Да назвы была прымацаваная квітанцыя аб ўтылізацыі з сённяшняй датай на ім і подпісам уладальнікаў.
         p. 
             Гэта не можа быць праўдай. Я не разумею што гэта значыць, гэтыя паперы абвяшчаюць, што гэта машына -- Я? 
         p.
-            Я прачытаў усё, што мог, але большая частка інфармацыі была бескарыснай. За выключэннем таго, што праз 25 гадоў ваша машына больш не павiнна працаваць.
+            Я прачытаў усё, што мог, але большая частка інфармацыі была назаўсёды бескарыснай. За выключэннем таго, што праз 25 гадоў ваша машына больш не павiнна працаваць.
         p.
             Святло пры дарозе, чутныя гукi ў дзвярэй, хай яны прыходзяць за мной, для мяне тут больш нічога не засталося.
         p. 
-            Я выдаткаваў ўсё сваё жыццё, думаючы, што я чалавек, але яны падманулі мяне, прымусіўшы думаць, што я адзін з іх, у надзеі выканання працы па хаце, мыццё ў доме будзе гранічна чыстай, я хачу самапавагі.
+            Я выдаткаваў усё сваё жыццё, думаючы, што я чалавек, але яны падманулі мяне, прымусіўшы думаць, што я адзін з ніх, у надзеі выканання працы па хаце, мыццё ў доме будзе гранічна чыстай, я хацеў самапавагі.
         p. 
-            Я хацеў павагі ў гонцы, якая была чужая мне. Як я мог адчуваць сябе жывым і адначасова проста быць машынай. Я злосны на тое, што яны зрабілі для мяне. Мая сям'я - гэта ўсё, што ў мяне ёсць. Яны пакінулі мяне тут аднаго, каб ахвяраваць мной.
+            Я хацеў павагі ў гонцы, якая была чужая да мяне. Як я мог адчуваць сябе жывым і адначасова быць машынай. Я злосны на тое, што яны зрабілі для мяне. Мая сям'я -- гэта ўсё, што ў мяне засталося. Яны пакінулі мяне тут аднаго, каб ахвяраваць мной.
         p. 
-            Я падымуся на дах і дам ім тое, што яны ад мяне хочуць. Калі я ўжо такі робат, то боль ніколі і не была сапраўднай. Проста праграма, каб звязаць чалавечы шлях з маёю целам. Толькі праз 25 гадоў увесь сэнс нарэшце выявіўся да мяне.
+            Я падымуся на дах і дам ім тое, што яны ад мяне хочуць. Калі я ўжо такая машына, то боль ніколі і не была сапраўднай. Праграма, каб звязаць чалавечы шлях з маёю целам. Праз 25 гадоў увесь сэнс нарэшце выявіўся да мяне.
         p. 
-            Які бог пакідае сваё тварэнне ў пакутах свабоднай волі? Поддерживат цябе як істота дзеля тваёй працы, а затым перапрацоўвае пакінутыя часткі. Яны не могуць мець гэтыя канечнасці, вярніце іх маіх бацькоў. Перадайце ім, што сасуд спрабаваў знайсці праўду пад яго скурай.
+            Які бог пакідае сваё тварэнне ў пакутах свабоды волі? Падтрымлiвае цябе, як істота дзеля тваёй працы, а затым перапрацоўвае пакінутыя часткі. Яны не могуць мець гэтыя канечнасці, вярніце іх маім бацькам. Перадайце ім, што сасуд спрабаваў знайсці праўду пад яго скурай.
         p. 
             Дзевяццю паверхамі вышэй, адной гісторыяй менш. Метал супракаснуўся з зямлёй, мозг разбураны, кропка.
