--- a/blog/2019/Спектральный-анализ-психофизического-расслоения.pug
+++ b/blog/2019/Спектральный-анализ-психофизического-расслоения.pug
@@ -45,7 +45,7 @@ block content
             Этот текст будет дополнен.
 
         p. 
-            Хоть бы он не превратился в сборище сшитых заплаток инородных текстов, пусть сочотся мисинтерпретацией, нежели мисреализацией.
+            Хоть бы он не превратился в сборище сшитых заплаток инородных контекстов, пусть сочится мисинтерпретацией, нежели мисреализацией.
 
         p. 
             Есть места, где всё двоится и расщепляется. Обычному глазу они не заметны, но есть несколько примет их различающие: например, стоят дома по такой-то улице, а у них у всех один номер. Фрагменты улицы, детских площадок, повторяются, будто сгенерированные. Город идей, сны без восприятия таковости. Люди, проходя подобные места, часто ощущают себя неуютно и растерянно: словно расщепляются, их раздирают разные стремления и чувства, для предотвращения которых сворачиваются в клубок, дабы полностью не потерять самого себя. Порой бывает очень трудно потом снова собраться в одного целого себя. Такие места могут быть полезны: например, если хочешь избавиться от прицепыша, который прилип к тебе так, что начинаешь не различать своё от чужого. Нужно прийти в такое место, во время своего расслоения -- отделить ненужное и быстро уйти. Главное, успеть спаяться в одно целое до тех пор, пока брошенное тебя не успело догнать. Одежда помогает в защите от инородного. Во снах одежда играет роль знака, а не защиты от холода. Во сне нет холода ровно как и погоды вообще, но присутствует их знак, интерпретация которого категорически необходима для правильного понимания (мисинтерпретация происходит на уровне развития и интимной близости человека к сакральному). Люди во снах скорее окутываются в себя, прячутся во внутрь, порождая собой пучки невоспринимаемых ощущений. 
