--- a/blog/index.pug
+++ b/blog/index.pug
@@ -9,10 +9,7 @@ block content
         h1 Stream
     main 
         - 
-            const articles = [ [ "Functorial-Surgery.html"                              , 2019 ]
-                             , [ "Cohomology-of-breakages-and-repairings.html"          , 2019 ]
-                             , [ "プラスチック.html"                                      , 2019 ]
-                             , [ "Спектральный-анализ-психофизического-расслоения.html" , 2019 ]
+            const articles = [ [ "Спектральный-анализ-психофизического-расслоения.html" , 2019 ]
                              , [ "Сасуд.html"                                           , 2019 ]
                              , [ "Отступ-в-Формальную-Философию.html"                   , 2018 ] 
                              , [ "Fish-can't-see-water.html"                            , 2018 ] ]
